persist scale
