# server/cmd/docs/swagger.yaml
@@ -24,12 +24,32 @@ definitions:
     - id
     - rssi
     type: object
+  request.ScaleRequest:
+    properties:
+      meters:
+        type: number
+      pixels:
+        type: number
+    required:
+    - meters
+    - pixels
+    type: object
   response.Root:
     properties:
       message:
         type: string
     required:
     - message
+    type: object
+  response.Scale:
+    properties:
+      meters:
+        type: number
+      pixels:
+        type: number
+    required:
+    - meters
+    - pixels
     type: object
 info:
   contact: {}
@@ -69,4 +89,30 @@ paths:
       summary: UpdateDevicePosition
       tags:
       - device
+  /scales:
+    get:
+      operationId: getScale
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Scale'
+      summary: GetScale
+      tags:
+      - scale
+    post:
+      operationId: createScale
+      parameters:
+      - description: Scale Request
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ScaleRequest'
+      responses:
+        "200":
+          description: OK
+      summary: CreateScale
+      tags:
+      - scale
 swagger: "2.0"
