# server/internal/domain/entity/scale.go
@@ -1,0 +1,6 @@
+package entity
+
+type Scale struct {
+	Meters float64
+	Pixels float64
+}
