# server/internal/infrastructure/postgres/sqlc/scale.sql.go
@@ -1,0 +1,58 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+// source: scale.sql
+
+package sqlc
+
+import (
+	"context"
+)
+
+const createScale = `-- name: CreateScale :one
+INSERT INTO "scales" (
+    meters,
+    pixels
+) VALUES (
+$1,
+$2
+)
+RETURNING id, meters, pixels, created_at, updated_at
+`
+
+type CreateScaleParams struct {
+	Meters float64
+	Pixels float64
+}
+
+func (q *Queries) CreateScale(ctx context.Context, arg CreateScaleParams) (Scale, error) {
+	row := q.db.QueryRowContext(ctx, createScale, arg.Meters, arg.Pixels)
+	var i Scale
+	err := row.Scan(
+		&i.ID,
+		&i.Meters,
+		&i.Pixels,
+		&i.CreatedAt,
+		&i.UpdatedAt,
+	)
+	return i, err
+}
+
+const getScale = `-- name: GetScale :one
+SELECT id, meters, pixels, created_at, updated_at
+FROM "scales"
+LIMIT 1
+`
+
+func (q *Queries) GetScale(ctx context.Context) (Scale, error) {
+	row := q.db.QueryRowContext(ctx, getScale)
+	var i Scale
+	err := row.Scan(
+		&i.ID,
+		&i.Meters,
+		&i.Pixels,
+		&i.CreatedAt,
+		&i.UpdatedAt,
+	)
+	return i, err
+}
