# server/internal/presentation/http/server.go
@@ -20,6 +20,7 @@ type Server struct {
 func NewServer(
 	rootHandler *handler.RootHandler,
 	deviceHandler *handler.DeviceHandler,
+	scaleHandler *handler.ScaleHandler,
 ) *Server {
 	engine := gin.New()
 	engine.Use(gin.Logger(), gin.Recovery())
@@ -30,6 +31,12 @@ func NewServer(
 	devices := engine.Group("/devices")
 	{
 		devices.POST("/position", deviceHandler.UpdatePosition)
+	}
+
+	scales := engine.Group("/scales")
+	{
+		scales.POST("", scaleHandler.CreateScale)
+		scales.GET("", scaleHandler.GetScale)
 	}
 
 	return &Server{engine: engine}
